更新README.md；更新favicon.ico；修改一处拼写错误；小问题调整